[issue # 12466] Bilder zugefügt, Logger statments geändert

--- a/src/main/resources/css/costumer.css
+++ b/src/main/resources/css/costumer.css
@@ -1,5 +1,14 @@
-.root{}
-
+#basicpane{
+ -fx-background-repeat: no-repeat;
+   -fx-background-position: center;
+   -fx-background-size: 100%;
+   -fx-background-color: transparent;
+   -fx-background-image: url('/images/studio.jpg');
+}
+#logo{
+ -fx-fit-width: 15em;
+   -fx-fit-height:15em;
+}
 .button{
    -fx-text-fill: black;
    -fx-font-family: HP Simplified;
