--- a/src/main/resources/fxml/kameraFilterFrame.fxml
+++ b/src/main/resources/fxml/kameraFilterFrame.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.KameraFilterController">
+<GridPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.CameraFilterController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" percentWidth="100.0" />
   </columnConstraints>
@@ -30,9 +30,9 @@
          <children>
             <Label fx:id="titel" GridPane.columnIndex="1" />
             <Button fx:id="backbutton" mnemonicParsing="false" onAction="#onBackbuttonpressed" style="-fx-background-image: url('/images/arrowleft.png');" />
-            <Button fx:id="singel" mnemonicParsing="false" onAction="#onsingelPressed" style="-fx-background-image: url('/images/singleshot.png');" GridPane.columnIndex="2" />
-            <Button fx:id="serien" mnemonicParsing="false" onAction="#onserienPressed" style="-fx-background-image: url('/images/multishot.png');" GridPane.columnIndex="3" />
-            <Button fx:id="ontime" mnemonicParsing="false" onAction="#ontimerPressed" style="-fx-background-image: url('/images/timer.png');" GridPane.columnIndex="4" />
+            <Button fx:id="singel" mnemonicParsing="false" onAction="#onSinglePressed" style="-fx-background-image: url('/images/singleshot.png');" GridPane.columnIndex="2" />
+            <Button fx:id="serien" mnemonicParsing="false" onAction="#onSerialPressed" style="-fx-background-image: url('/images/multishot.png');" GridPane.columnIndex="3" />
+            <Button fx:id="ontime" mnemonicParsing="false" onAction="#onTimerPressed" style="-fx-background-image: url('/images/timer.png');" GridPane.columnIndex="4" />
          </children>
       </GridPane>
       <ScrollPane fx:id="filterscrollplanel" GridPane.rowIndex="1">
