--- a/src/main/resources/fxml/greenscreenCategoryFrame.fxml
+++ b/src/main/resources/fxml/greenscreenCategoryFrame.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -9,21 +10,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 
-<TitledPane fx:id="greenscreenCategory" animated="false" prefHeight="522.0" text="Greenscreen-&gt;Kategorieverwaltung" GridPane.columnIndex="1" GridPane.rowIndex="3" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.GreenscreenCategoryFrameController">
+<TitledPane fx:id="greenscreenCategory" animated="false" prefHeight="522.0" text="Greenscreen-&gt;Kategorieverwaltung" GridPane.columnIndex="0" GridPane.rowIndex="3" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.GreenscreenCategoryFrameController">
 <content>
             <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
                 <children>
 
-                    <TableView fx:id="tableCategory" layoutY="50.0" prefHeight="370.0">
+                    <TableView fx:id="tableCategory" layoutY="0.0" prefHeight="420.0" minWidth="500">
                         <columns>
                             <TableColumn fx:id="colCategoryID" prefWidth="44.74237585067749" text="ID" />
-                            <TableColumn fx:id="colCategoryName" prefWidth="325" text="Name" />
+                            <TableColumn fx:id="colCategoryName" prefWidth="271.0" text="Name" />
+                            <TableColumn fx:id="colCategoryActivated" prefWidth="79.0" text="Aktiviert" />
                             <TableColumn fx:id="colCategoryAction" minWidth="0.0" prefWidth="58.9962158203125" text="Aktion" />
 
                         </columns>
                     </TableView>
-                    <TextField fx:id="txCategoryName" layoutX="51.0" layoutY="435.0" prefHeight="27.0" prefWidth="300.0" />
-                    <Button layoutX="378.0" layoutY="435.0" mnemonicParsing="false" onAction="#saveCategory" text="ADD" />
+                    <TextField fx:id="txCategoryName" layoutX="51.0" layoutY="435.0" prefHeight="27.0" prefWidth="263.0" />
+                    <CheckBox fx:id="txCategoryActivated" layoutX="351.0" layoutY="439.0" mnemonicParsing="false" />
+                    <Button layoutX="403.0" layoutY="435.0" mnemonicParsing="false" onAction="#saveCategory" text="ADD" />
                 </children>
             </AnchorPane>
         </content>
